--- a/src/index.css
+++ b/src/index.css
@@ -122,6 +122,12 @@ p {
 
 /** Personal styles */
 
+
+.container{
+  display: flex;
+  flex-direction: row;
+}
+
 .btn {
   text-transform: uppercase;
   background: transparent;
@@ -145,12 +151,69 @@ p {
   padding: 5rem 0;
 }
 
+
 .section-center {
+  position: fixed;
+  left: 15%;
   width: 90vw;
   margin: 0 auto;
   max-width: 35rem;
-  margin-top: 8rem;
+  margin-top: 2rem;
   /* background-color: aqua;  */
+}
+
+/* The div that holds it all */
+.section-start {
+  position: fixed;
+  width: 15%;
+  height: 40vw;
+  margin-top: 2rem;
+  display: flex;  
+  justify-content: center;
+  
+}
+
+.userIcons{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 100px;
+  font-size: 1.5rem;
+  margin: 0 0.5rem;
+  color: var(--clr-primary-5);
+  transition: var(--transition);
+}
+
+
+
+.social-icons .twitter-icon {
+  margin-left: 20%;
+}
+
+.social-icons .feather-icon {
+  margin-left: 20%;
+}
+
+.social-icons {
+  justify-self: center;
+  display: flex;
+  padding-bottom: 2rem;
+  justify-content: space-between;
+  flex-direction: column;
+
+  margin-top: 100px;
+  font-size: 1.5rem;
+  margin: 0 0.5rem;
+  color: var(--clr-primary-5);
+  transition: var(--transition);
+}
+
+.social-icons a {
+  margin-top: 100px;
+  font-size: 1.5rem;
+  margin: 0 0.5rem;
+  color: var(--clr-primary-5);
+  transition: var(--transition);
 }
 
 .tweet-form h3 {
@@ -163,6 +226,7 @@ p {
 .form-control{
   display: flex;
   justify-content: center;
+  margin-bottom: 1rem;
 }
 
 .tweet{
@@ -187,6 +251,19 @@ p {
   flex-direction: row;
   margin-top: 0.2rem;
   border: 1px solid gray;
+  margin-bottom: 1em;
+}
+
+.tweetPlacement p, .tweetPlacement .userName {
+  margin-left: 0.2rem;
+}
+
+.pfp{
+  width: 4em;
+  height: 4em;
+  margin-left: 0.2rem;
+  margin-top: 0.2rem;
+  border-radius: 50%;
 }
 
 /* * img of said tweet */
@@ -195,6 +272,7 @@ p {
   height: 4em;
   margin-left: 0.2rem;
   margin-top: 0.2rem;
+  border-radius: 50%;
 }
 
 /* * text of said tweet */
@@ -205,9 +283,43 @@ p {
 /* The bottom of the tweet */
 .icons-tweet{
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
+  margin: 0 0 0.3rem .2rem;
+  
 }
 
 .like-button{
-  
+  display: flex;
+  justify-content: flex-start;
+}
+
+/* Fix later */
+
+.submit-btn {
+  background: var(--clr-primary-8);
+  border-color: transparent;
+  flex: 0 0 5rem;
+  display: grid;
+  align-items: center;
+  padding: 0.25rem;
+  text-transform: capitalize;
+  letter-spacing: 2px;
+  border-top-right-radius: var(--radius);
+  border-bottom-right-radius: var(--radius);
+  cursor: pointer;
+  content: var(--clr-primary-5);
+  transition: var(--transition);
+  font-size: 0.85rem;
+}
+
+.grocery {
+  padding: 0.25rem;
+  padding-left: 1rem;
+  background: var(--clr-grey-10);
+  border-top-left-radius: var(--radius);
+  border-bottom-left-radius: var(--radius);
+  border-color: transparent;
+  font-size: 1rem;
+  flex: 1 0 auto;
+  color: var(--clr-grey-5);
 }
