--- a/src/index.css
+++ b/src/index.css
@@ -256,28 +256,60 @@ p {
 /***********************
 /********* SingleProfile *****
 /*  */
-.background-picture {
 
+.single-section-center {
+  position: relative;
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 41rem;
+  margin-top: 2rem;
+  /* background-color: aqua;  */
+}
+
+.background-picture {
+  position: static;
+  width: 90vw;
+  margin: 0 auto;
+  max-width: 41rem;
+  margin-top: 2rem;
 }
 
 .background-picture img{
   width: 100vh;
-
+  
 
 }
 
 .profile-picture{
-
+  height: 6.4rem;
+  /* background-color: gray; */
 }
 
 .profile-picture img{
+  position: relative;
+  bottom: 5rem;
+  margin-left: 1rem;
+  border: 4px solid white;
   border-radius: 50%;
-  width: 2rems;
-  height: 2rems;
+  width: 11rem;
+  height: 11rem;
+  
 }
 
 .profile-info{
-  
+  /* background-color: aqua; */
+}
+
+.profile-info h4{
+  margin-top: 2px;
+  margin-left: 2rem;
+  color: black;
+  font-weight: bolder;
+}
+
+.profile-info h5{
+  margin-left: 2rem;
+  color: gray;
 }
 
 .following-followers{
