--- a/src/mysass.scss
+++ b/src/mysass.scss
@@ -4,46 +4,46 @@ Variables
 ===============
 */
 
-:root {
-    /* dark shades of primary color*/
-    --clr-primary-1: hsl(205, 86%, 17%);
-    --clr-primary-2: hsl(205, 77%, 27%);
-    --clr-primary-3: hsl(205, 72%, 37%);
-    --clr-primary-4: hsl(205, 63%, 48%);
-    /* primary/main color */
-    --clr-primary-5: hsl(205, 78%, 60%);
-    /* lighter shades of primary color */
-    --clr-primary-6: hsl(205, 89%, 70%);
-    --clr-primary-7: hsl(205, 90%, 76%);
-    --clr-primary-8: hsl(205, 86%, 81%);
-    --clr-primary-9: hsl(205, 90%, 88%);
-    --clr-primary-10: hsl(205, 100%, 96%);
-    /* darkest grey - used for headings */
-    --clr-grey-1: hsl(209, 61%, 16%);
-    --clr-grey-2: hsl(211, 39%, 23%);
-    --clr-grey-3: hsl(209, 34%, 30%);
-    --clr-grey-4: hsl(209, 28%, 39%);
-    /* grey used for paragraphs */
-    --clr-grey-5: hsl(210, 22%, 49%);
-    --clr-grey-6: hsl(209, 23%, 60%);
-    --clr-grey-7: hsl(211, 27%, 70%);
-    --clr-grey-8: hsl(210, 31%, 80%);
-    --clr-grey-9: hsl(212, 33%, 89%);
-    --clr-grey-10: hsl(210, 36%, 96%);
-    --clr-white: #fff;
-    --clr-red-dark: hsl(360, 67%, 44%);
-    --clr-red-light: hsl(360, 71%, 66%);
-    --clr-green-dark: hsl(125, 67%, 44%);
-    --clr-green-light: hsl(125, 71%, 66%);
-    --clr-black: #222;
-    --transition: all 0.3s linear;
-    --spacing: 0.1rem;
-    --radius: 0.25rem;
-    --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-    --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-    --max-width: 1170px;
-    --fixed-width: 620px;
-}
+// :root {
+//     /* dark shades of primary color*/
+//     --clr-primary-1: hsl(205, 86%, 17%);
+//     --clr-primary-2: hsl(205, 77%, 27%);
+//     --clr-primary-3: hsl(205, 72%, 37%);
+//     --clr-primary-4: hsl(205, 63%, 48%);
+//     /* primary/main color */
+//     --clr-primary-5: hsl(205, 78%, 60%);
+//     /* lighter shades of primary color */
+//     --clr-primary-6: hsl(205, 89%, 70%);
+//     --clr-primary-7: hsl(205, 90%, 76%);
+//     --clr-primary-8: hsl(205, 86%, 81%);
+//     --clr-primary-9: hsl(205, 90%, 88%);
+//     --clr-primary-10: hsl(205, 100%, 96%);
+//     /* darkest grey - used for headings */
+//     --clr-grey-1: hsl(209, 61%, 16%);
+//     --clr-grey-2: hsl(211, 39%, 23%);
+//     --clr-grey-3: hsl(209, 34%, 30%);
+//     --clr-grey-4: hsl(209, 28%, 39%);
+//     /* grey used for paragraphs */
+//     --clr-grey-5: hsl(210, 22%, 49%);
+//     --clr-grey-6: hsl(209, 23%, 60%);
+//     --clr-grey-7: hsl(211, 27%, 70%);
+//     --clr-grey-8: hsl(210, 31%, 80%);
+//     --clr-grey-9: hsl(212, 33%, 89%);
+//     --clr-grey-10: hsl(210, 36%, 96%);
+//     --clr-white: #fff;
+//     --clr-red-dark: hsl(360, 67%, 44%);
+//     --clr-red-light: hsl(360, 71%, 66%);
+//     --clr-green-dark: hsl(125, 67%, 44%);
+//     --clr-green-light: hsl(125, 71%, 66%);
+//     --clr-black: #222;
+//     --transition: all 0.3s linear;
+//     --spacing: 0.1rem;
+//     --radius: 0.25rem;
+//     --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+//     --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+//     --max-width: 1170px;
+//     --fixed-width: 620px;
+// }
 
 /*
 =============== 
@@ -51,118 +51,171 @@ Global Styles
 ===============
 */
 
-*{
-    &:after, &:before {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    }
-}
-body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background: var(--clr-grey-10);
-    color: var(--clr-grey-1);
-    line-height: 1.5;
-    font-size: 0.875rem;
-}
-ul {
-    list-style-type: none;
-}
-a {
-    text-decoration: none;
-}
-h1,
-h2,
-h3,
-h4 {
-    letter-spacing: var(--spacing);
-    text-transform: capitalize;
-    line-height: 1.25;
-    margin-bottom: 0.75rem;
-}
-h1 {
-    font-size: 3rem;
-}
-h2 {
-    font-size: 2rem;
-}
-h3 {
-    font-size: 1.25rem;
-}
-h4 {
-    font-size: 0.875rem;
-}
-p {
-    margin-bottom: 1.25rem;
-    color: var(--clr-grey-5);
-}
-@media screen and (min-width: 800px) {
-    h1 {
-        font-size: 4rem;
-    }
-    h2 {
-        font-size: 2.5rem;
-    }
-    h3 {
-        font-size: 1.75rem;
-    }
-    h4 {
-        font-size: 1rem;
-    }
-    body {
-        font-size: 1rem;
-    }
-    h1,
-    h2,
-    h3,
-    h4 {
-        line-height: 1;
-    }
-}
+// *{
+//     &:after, &:before {
+//     margin: 0;
+//     padding: 0;
+//     box-sizing: border-box;
+//     }
+// }
+// body {
+//     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+//     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+//     background: var(--clr-grey-10);
+//     color: var(--clr-grey-1);
+//     line-height: 1.5;
+//     font-size: 0.875rem;
+// }
+// ul {
+//     list-style-type: none;
+// }
+// a {
+//     text-decoration: none;
+// }
+// h1,
+// h2,
+// h3,
+// h4 {
+//     letter-spacing: var(--spacing);
+//     text-transform: capitalize;
+//     line-height: 1.25;
+//     margin-bottom: 0.75rem;
+// }
+// h1 {
+//     font-size: 3rem;
+// }
+// h2 {
+//     font-size: 2rem;
+// }
+// h3 {
+//     font-size: 1.25rem;
+// }
+// h4 {
+//     font-size: 0.875rem;
+// }
+// p {
+//     margin-bottom: 1.25rem;
+//     color: var(--clr-grey-5);
+// }
+// @media screen and (min-width: 800px) {
+//     h1 {
+//         font-size: 4rem;
+//     }
+//     h2 {
+//         font-size: 2.5rem;
+//     }
+//     h3 {
+//         font-size: 1.75rem;
+//     }
+//     h4 {
+//         font-size: 1rem;
+//     }
+//     body {
+//         font-size: 1rem;
+//     }
+//     h1,
+//     h2,
+//     h3,
+//     h4 {
+//         line-height: 1;
+//     }
+// }
 
 //***********************
 //********* Sidebar *****
 
 //* Main Div that holds the Sidebar */
-.section-start {
+// .section-start {
+//     position: fixed;
+//     background-color: aqua;
+//     left: 2rem;
+//     width: 9rem;
+//     height: 21rem;
+    
+    
+    
+    // position: fixed;
+    // width: 15%;
+    // height: 40vw;
+    // left: 20px;
+    // margin-top: 2rem;
+    // display: flex;  
+    // justify-content: center;    
+    //* Icons that are displayed */
+.social-icons {
     position: fixed;
-    width: 15%;
-    height: 40vw;
-    margin-top: 2rem;
-    display: flex;  
-    justify-content: center;    
+    top:3.7rem;
+    // background-color: red;
+    width: 200px;
+    // left: 1.4rem;
+    
+    // height: 25rem;
+    // width: 11rem;
+    // display: flex;
+    
+    
+    
+    // ? Twitter symbol
+    .twitter-icon {
+        // background-color: purple;
+        margin-top: 3.3rem;
+        margin:  0 0;
+        margin-left: 1.5rem;
+        width: 4rem;
+        height: 2rem;
+        // background-color: orange;
+    }
+    .home-btn{
+        margin:  0 0;
+        margin-top: 1.3rem;
+        margin-left: 1.2rem;
+        width: 4rem;
+        height: 2rem;
+        
+        
+    }
+    .profile-btn{
+        margin:  0 0;
+        margin-top: 1.3rem;
+        margin-left: 1.5rem;
+        width: 4rem;
+        height: 2rem;
+    }
+    // The two icons in the center
+    .links{
+        li {
+            margin-top: 20px;
+            width: 7rem;
+            margin-left: 2rem;
+            height: 4rem;
+            color: purple;
+            // background-color: blue;
+            // margin-top: 100px;
+            // font-size: 1.5rem;
+            // margin: 0 0.5rem;
+            // color: var(--clr-primary-5);
+            // transition: var(--transition);
+        }
+        
+    }
+
+    // Feather at the bottom
+    .feather-icon {
+        margin: 0 0;
+        margin-left: 2rem;
+        width: 7rem;
+        height: 4rem;
+        color: black;
+        // background-color: yellow;
+    }
 }
 
-//* Icons that are displayed */
-.social-icons {
-    justify-self: center;
-    display: flex;
-    padding-bottom: 2rem;
-    justify-content: space-between;
-    flex-direction: column;  
-    margin-top: 100px;
-    font-size: 1.5rem;
-    margin: 0 0.5rem;
-    color: var(--clr-primary-5);
-    transition: var(--transition);
-}
+
+
+
+
 
 //* OVerall style for the icons */
-.social-icons a {
-    margin-top: 100px;
-    font-size: 1.5rem;
-    margin: 0 0.5rem;
-    color: var(--clr-primary-5);
-    transition: var(--transition);
-    
-    .twitter-icon {
-        margin-left: 20%;
-    }
-    .feather-icon {
-        margin-left: 20%;
-    }
-}
 
 //*********************
 //******** TweetList *****
@@ -250,70 +303,83 @@ p {
 //******** SingleProfile *****
 
 .single-section-center {
-    position: relative;
-    width: 90vw;
-    margin: 0 auto;
-    max-width: 41rem;
-    margin-top: 2rem;
-    /* background-color: aqua;  */
-}
-
-.background-picture {
-    position: static;
-    width: 90vw;
-    margin: 0 auto;
-    max-width: 41rem;
-    margin-top: 2rem;
-    img{
-        width: 100vh;
-    }
-}
-
-.profile-picture{
-    height: 6.4rem;
-    /* background-color: gray; */
+    display: flex;
+    flex-direction: column;
     
-    // * Image for profile picture div
-    img{
-        position: relative;
-        bottom: 5rem;
-        margin-left: 1rem;
-        border: 4px solid white;
-        border-radius: 50%;
-        width: 11rem;
-        height: 11rem;
+    
+    // width: 41rem;
+    // margin-top: 2rem;
+    // border: 1px solid gray;
+    // background-color: aqua;
+    
+    
+    .background-picture {
+        img{
+            position: relative;
+            width: 90vw;
+            height: 40vh;
+            // margin: 0 auto;
+            max-width: 41rem;
+            // margin-top: 2rem;
+        }
+    }
+    
+    .profile-picture{
+        height: 6.4rem;
+        /* background-color: gray; */
         
+        // * Image for profile picture div
+        img{
+            position: relative;
+            bottom: 5rem;
+            margin-left: 1rem;
+            border: 4px solid white;
+            border-radius: 50%;
+            width: 11rem;
+            height: 11rem;
+            
+        }
     }
-}
+    
 
-
-
-.profile-info{
-    /* background-color: aqua; */
-
-    //* username
-    h4{
-        margin-top: 2px;
+    .profile-info{
+        /* background-color: aqua; */
+    
+        //* username
+        h4{
+            margin-top: 2px;
+            margin-left: 2rem;
+            color: black;
+            font-weight: bolder;
+        }
+    
+        //* handle name
+        h5{
+            margin-left: 2rem;
+            color: gray;
+        }
+    }
+    
+    .profile-text{
+        color: #222;
+        p{
+            color: black;
+            margin-left: 2rem;
+        }
+    }
+    
+    .following-followers{
         margin-left: 2rem;
-        color: black;
-        font-weight: bolder;
     }
-
-    //* handle name
-    h5{
-        margin-left: 2rem;
-        color: gray;
+    
+    .tweets-display{
+    
     }
 }
 
 
-.following-followers{
 
-}
 
-.tweets-display{
-
-}
 
 
 //**********************
@@ -394,20 +460,7 @@ p {
 
 //**********************
 //******** App *****
-.container{
-    display: flex;
-    flex-direction: row;
-}
+// .container{
+//     background-color: aqua;
+// }
 
-body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-        sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}  
-
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
-}
