--- a/client/src/components/home/Home.scss
+++ b/client/src/components/home/Home.scss
@@ -1,11 +1,10 @@
 @import '../../style/mixins.scss';
 
 .home{
-    position: fixed;
+    position: absolute;
     top: 0; 
     left: 200px; /*Set left value to WidthOfFrameDiv*/
     right: 0;
     bottom: 0;
     overflow: auto; 
-    background: #fff;
 }
