--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -15,6 +15,8 @@ body{
     overflow: hidden;
     height: 100%; 
     max-height: 100%; 
+    background-color: var(--primary-color);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .container{
