--- a/client/src/components/auth/AuthForm.scss
+++ b/client/src/components/auth/AuthForm.scss
@@ -1,5 +1,16 @@
 @import '../../style/mixins.scss';
 
 .auth-form{
+    position: absolute;
     
+    top: 0; // As you can guess this is how high it will be :: 0 is the top
+    bottom: 0; // Doesn't really show a difference
+    left: 18.5%; // How far left we want this to appear
+
+    width: 100%;
+    height: 100vh;
+    // overflow: hidden; /*Disable scrollbars. Set to "scroll" to enable*/
+    background: var(--primary-color);
+    margin-left: 1rem;
+    margin-top: 1rem;
 }
