--- a/client/src/components/misc/Sidebar.scss
+++ b/client/src/components/misc/Sidebar.scss
@@ -2,15 +2,32 @@
 
 .sidebar{
     position: absolute;
-    top: 0;
-    bottom: 0; 
-    left: 0;
-    width: 200px; /*Width of frame div*/
-    height: 100%;
+    
+    top: 0; // As you can guess this is how high it will be :: 0 is the top
+    bottom: 0; // Doesn't really show a difference
+    left: 0; // How far left we want this to appear
+
+    width: 18.5%;
+    height: 100vh;
     // overflow: hidden; /*Disable scrollbars. Set to "scroll" to enable*/
     background: aqua;
-    color: var(--text-light-color);
 
+    // Allows us to separate two divs within the parent div
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    .displayList{
+
+    }
+    .authList{
+        margin-bottom: 1rem;
+        .register{
+            margin-right: 0.2rem;
+        }
+        .login{
+            margin-left: 0.2rem;
+        }
+    }
     p{
         margin: 1.5rem 0 0 0;
         display: flex;
