--- a/client/src/components/home/Home.scss
+++ b/client/src/components/home/Home.scss
@@ -7,4 +7,25 @@
     right: 0;
     bottom: 0;
     overflow: auto; 
+
+    .no-tweets-msg{
+        margin-top: 6rem;
+        color: var(--text-light-color);
+        text-align: center;
+        h2 {
+            font-size: 3rem;
+        }
+        
+        a{
+            @include btn();
+            margin-top: 2rem;
+            color: var(--text-dark-color);
+            background: var(--light-color);
+            display: inline-block;
+
+            &:hover{
+                text-decoration: unset;
+            }
+        }
+    }
 }
