--- a/client/src/components/misc/Sidebar.scss
+++ b/client/src/components/misc/Sidebar.scss
@@ -27,15 +27,12 @@
         .login{
             margin-left: 0.2rem;
         }
-        .userDisplay{
-            display: flex;
-            flex-direction: column;
-            .btn-logout{
-                @include btn();
-                margin-right: 1rem;
-                background-color: var(--danger-color);
-                color: var(--text-light-color);
-            }
+        .btn-logout{
+            @include btn();
+            margin-right: 1rem;
+            background-color: var(--danger-color);
+            color: var(--text-light-color);
+            margin-left: 3.2rem;
         }
     }
     p{
