--- a/client/src/components/sidebar/Sidebar.scss
+++ b/client/src/components/sidebar/Sidebar.scss
@@ -33,10 +33,18 @@
             background-color: var(--danger-color);
             color: var(--text-light-color);
             margin-left: 3.2rem;
+            p{
+                margin: 0;
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                color: var(--text-light-color);
+                
+            }
         }
     }
     p{
-        margin: 1.5rem 0 0 0;
+        margin-top: 1.5rem;
         display: flex;
         justify-content: center;
         color: var(--text-dark-color);
