--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -14,6 +14,6 @@
 
     --text-danger-color: #a81515;
 
-    --box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23)
+    --box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 
 }
