--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -19,6 +19,7 @@ body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+// ! Removed this for more control
 .container{
     margin: 0 auto;
     padding: 1rem;
