--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -1,5 +1,6 @@
 :root{
-    --primary-color: #721bff;
+    // --primary-color: #721bff;
+    --primary-color: #fff;
 
     --light-color: #fff;
     --dark-color: #d1d1d1;
