--- a/client/src/components/sidebar/SingleProfile.scss
+++ b/client/src/components/sidebar/SingleProfile.scss
@@ -6,7 +6,7 @@
 
 
     .profile-background-area{
-        position: static;
+        
         // width: 80%;
         margin: 0 auto;
         // max-width: 41rem;
@@ -19,6 +19,7 @@
     
     
     .profile-picture-section{
+        position: relative;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -45,8 +46,6 @@
     }
 
     .profile-info-section{
-        
-
         .profile-name{
             .name{
                 font-weight: 900;
@@ -79,6 +78,46 @@
     
     .display-tweets-section{
     
+    }
+
+    .edit-form{
+        position: fixed;
+        
+        top: 0;
+        bottom: 0; 
+        left: 0; 
+        
+        
+        
+        width: 100%;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, 0.2);
+    
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    
+        
+        
+    
+        .edit-box{
+            position: relative;
+            padding: 32px;
+            width: 100%;
+            max-width: 640px;
+            background-color: #FFF;
+            
+            .top-of-box{
+                display: flex;
+                justify-content: space-between;
+                span{
+                    font-weight: bold;
+                }
+            }
+        }
+        button{
+            @include btn();
+        }
     }
     
 }
