--- a/client/src/components/tweetComponent/Tweet.scss
+++ b/client/src/components/tweetComponent/Tweet.scss
@@ -1,48 +1,102 @@
 @import '../../style/mixins.scss';
 
-.tweet{
-    // @include card;
-    // margin: 1.5rem 1.5rem 0 1.5rem;
-    // margin: 3% 3% 0 3%;
-    margin-top: 1rem;
-
+.tweet{    
+    position: relative;
+    left: 3%;
+    width: 77%;
+    height: 8em;
+    margin-top: 3rem;
 
     display: flex;
-    justify-content: flex-start;
-    // flex-direction: row;
-    
+    flex-direction: row;
 
+    border: 1px solid black;
     .tweet-image-area{
         width: 10%;
-        background-color: aquamarine;
-        margin-right: 1%;
-        
-        .tweet-pfp{
-            display: flex;
-            justify-content: center;
-            width: 100%;
+        height: 5em;
+        img{
+            width: 5em;
+            height: 4.8em;
+            border-radius: 50%;
+            border: 1px solid black;
         }
     }
 
-    .tweet-text-area{
-        width: 90%;
+    .tweet-area{
         background-color: aqua;
+        width: 90%;
+        margin-left: 0.5em;
+        overflow: hidden;
+        text-overflow: clip;
 
+        
+        display: flex;
+        flex-direction: column;
         .header{
-
+            height: 25%;
+            .username{
+                margin-left: 0.4em;
+                font-weight: bold;
+            }
+            .handleName{
+                margin-left: 1rem;
+                color: gray;
+            }
         }
         .message{
+            height: 65%;
+            margin-left: 0.4em;
+            max-width: 95%;
+            overflow: hidden;
+            word-wrap: break-word;
+            font-size: 95%;
+        }
+        .del-btn-area{
             
+            height: 25%;
+            margin-left: 0.4em;
+            .btn-delete{
+                @include btn();
+                margin-right: 1rem;
+                background-color: var(--danger-color);
+                color: var(--text-light-color);
+            }
         }
-        .likesMisc{
 
-        }
+
     }
 
-    .btn-delete{
-        @include btn();
-        margin-right: 1rem;
-        background-color: var(--danger-color);
-        color: var(--text-light-color);
-    }
+    // .tweet-image-area{
+    //     width: 10%;
+    //     background-color: aquamarine;
+    //     margin-right: 1%;
+        
+    //     .tweet-pfp{
+    //         display: flex;
+    //         justify-content: center;
+    //         width: 100%;
+    //     }
+    // }
+
+    // .tweet-text-area{
+    //     width: 90%;
+    //     background-color: aqua;
+
+    //     .header{
+
+    //     }
+    //     .message{
+            
+    //     }
+    //     .likesMisc{
+
+    //     }
+    // }
+
+    // .btn-delete{
+    //     @include btn();
+    //     margin-right: 1rem;
+    //     background-color: var(--danger-color);
+    //     color: var(--text-light-color);
+    // }
 }
