Impleted master delete button

--- a/client/src/components/home/WebArea.scss
+++ b/client/src/components/home/WebArea.scss
@@ -2,10 +2,10 @@
 
 .web-area{
     
-    position: relative;
+    position: absolute;
     top: 0; 
-    left: 17%; 
     right: 0;
+    left: 17%; 
     bottom: 0;
     overflow: auto;
     height: 100vh;
