--- a/client/src/components/tweetComponent/Tweet.scss
+++ b/client/src/components/tweetComponent/Tweet.scss
@@ -3,7 +3,7 @@
 .tweet{    
     position: relative;
     left: 3%;
-    width: 77%;
+    width: 93%;
     height: 8em;
     margin-top: 3rem;
 
@@ -11,15 +11,18 @@
     flex-direction: row;
 
     border: 1px solid black;
+    
     .tweet-image-area{
         width: 10%;
+        margin: auto;
         height: 5em;
-        img{
-            width: 5em;
-            height: 4.8em;
-            border-radius: 50%;
-            border: 1px solid black;
-        }
+        padding-left: 0.5em;
+            img{
+                width: 100%;
+                height: 4.8em;
+                border-radius: 50%;
+                border: 1px solid black;
+            }
     }
 
     .tweet-area{
@@ -51,15 +54,29 @@
             word-wrap: break-word;
             font-size: 95%;
         }
-        .del-btn-area{
+        .button-section{
+            display: flex;
+            justify-content: space-between;
+            .del-btn-area{
             
-            height: 25%;
-            margin-left: 0.4em;
-            .btn-delete{
-                @include btn();
-                margin-right: 1rem;
-                background-color: var(--danger-color);
-                color: var(--text-light-color);
+                height: 25%;
+                margin-left: 0.4em;
+                .btn-delete{
+                    @include btn();
+                    margin-right: 1rem;
+                    background-color: var(--danger-color);
+                    color: var(--text-light-color);
+                }
+            }
+    
+            .potus-del-btn{
+    
+                .potus-btn-delete{
+                    @include btn();
+                    margin-right: 1rem;
+                    background-color: rgb(255, 230, 0);
+                    color: var(--text-dark-color);
+                }
             }
         }
 
