--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -16,6 +16,7 @@ body{
     height: 100%; 
     max-height: 100%; 
     background-color: var(--primary-color);
+    width: 100%;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
