--- a/client/src/components/auth/AuthForm.scss
+++ b/client/src/components/auth/AuthForm.scss
@@ -26,7 +26,7 @@
     .btn-submit{
         @include btn();
         margin-bottom: 1rem;
-        background-color: var(--primary-color);
-        color: var(--text-light-color);
+        background-color: rgb(73, 105, 209);
+        color: var(--text-dark-color);
     }
 }
