--- a/client/src/components/sidebar/SingleProfile.scss
+++ b/client/src/components/sidebar/SingleProfile.scss
@@ -1,8 +1,8 @@
-@import './sidebar-mixins.scss';
+// @import './sidebar-mixins.scss';
 @import '../../style/mixins.scss';
 
 .profile-section{
-    @include setDisplay();
+    // @include setDisplay();
 
 
     .profile-background-area{
