--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -2,31 +2,27 @@
 @import './mixins.scss';
 
 
+// * EVERYTHING
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+// * The entire webpage
 body{
     margin: 0;
     padding: 0;
     border: 0;
-    overflow: hidden;
-    height: 100%; 
-    max-height: 100%; 
-    background-color: var(--primary-color);
-    width: 100%;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+// * App.js contains .container
 .container{
-    margin: 0 auto;
-    padding: 1rem;
-    max-width: 1000px;
+
 }
 
-// ? Reset the button styles
+// * Reset the button styles
 button{
     border: unset;
     background: unset;
