--- a/client/src/components/sidebar/Sidebar.scss
+++ b/client/src/components/sidebar/Sidebar.scss
@@ -7,7 +7,7 @@
     
     width: 17%;
     height: 100vh;
-    border-right:1px solid black ;
+    border-right:1px solid gray ;
 
     // ? Split the icons with authlist
     display: flex;
@@ -46,6 +46,10 @@
         }
         
         p{
+            margin-top: 1.5rem;
+            display: flex;
+            justify-content: center;
+            color: var(--text-dark-color);
             text-decoration: none;
             display: flex;
             flex-direction: row;
@@ -70,51 +74,127 @@
                 padding: 7px 7px 7px 7px;
             }
         }
-        
-        // p{
-        //     @media (max-width:898.5px) {
-        //         position: relative;
-        //         left: 0;
-        //         font-size: 75%;
-        //     }
-        // }
-        // @media (max-width: 600px) {
-        //     font-size: 0.78em;
-        // }
     }
     
     // ^ Log out button || Display username
-    .authList{
-        margin-bottom: 1rem;
+    .sidebar-authlist{
+        height: 25%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
         
-        .register{
-            margin-right: 0.2rem;
-        }
-        .login{
-            margin-left: 0.2rem;
-        }
+        align-items: center;
 
-        .btn-logout{
-            @include btn();
+        .register-area{
             
-            background-color: var(--danger-color);
-            color: var(--text-light-color);
-            margin-left: 3.2rem;
             p{
-                margin: 0;
-                display: flex;
-                justify-content: center;
-                flex-direction: column;
-                color: var(--text-light-color);
-                
+                margin-left: 2.5em;
+                font-weight: 500;
+                font-size: 0.95em;
+                margin-bottom: 0.7em;
+            }
+            .register{
+                @include btn();
+                border-radius: 20px;
+                background-color: #1d9bf0;
+                color: white;
+                text-decoration: none;
+
             }
         }
+
+        .login-area{
+            
+            
+            p{
+                font-weight: 500;
+                font-size: 0.95em;
+                margin-bottom: 0.7em;
+            }
+            .login{
+                @include btn();
+                border-radius: 20px;
+                margin-left: 3em;
+                background-color: white;
+                border: 0.2px gray solid;
+                color: #1d9bf0;
+                text-decoration: none;
+            }
+        }
+        
+        // * Assume we are using row(default)
+        // ? Justify-content: alignment of the x axis
+        // ? Align-items: alignment of the y axis
+        // ? Align-content: ONLY APPLIES IF MORE THAN ONE ROW [Kinda useless]?
+
+
+        // * Display basic user info when they are logged in
+        .log-out-area{
+            
+            height: 100%;
+            width: 100%;
+            display: flex;
+            align-items: flex-end;
+
+            .mini-user-area{
+                display: flex;
+                flex-direction: row;
+                margin-left: 1em;
+                margin-bottom: 1em;
+
+                .mini-pfp{
+                    img{
+                        border-radius: 50%;
+                        width: 2.5em;
+                        height: 90%;
+                        margin-right: 0.4em;
+                    }
+                }
+                .mini-user-info{
+                    display: flex;
+                    flex-direction: column;
+                    .username-section{
+                        span{
+                            color: #a1cee0;
+                        }
+                    }
+
+                    .mini-logout{
+                        @include btn();
+                        margin-top: 0.3em;
+                        border: 1px solid #a1cee0;
+                        border-radius: 20px;
+                        
+                    }
+                }
+
+
+                
+
+
+            }
+
+
+        }
+
+
+
+        // .btn-logout{
+        //     @include btn();
+            
+        //     background-color: var(--danger-color);
+        //     color: var(--text-light-color);
+        //     margin-left: 3.2rem;
+        //     p{
+        //         margin: 0;
+        //         display: flex;
+        //         justify-content: center;
+        //         flex-direction: column;
+        //         color: var(--text-light-color);
+                
+        //     }
+        // }
     }
 
-    p{
-        margin-top: 1.5rem;
-        display: flex;
-        justify-content: center;
-        color: var(--text-dark-color);
-    }
+    
 }
