Tweet Section Complete

--- a/client/src/components/sidebar/Sidebar.scss
+++ b/client/src/components/sidebar/Sidebar.scss
@@ -1,7 +1,7 @@
 @import '../../style/mixins.scss';
 
 .entire-sidebar{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     
@@ -167,11 +167,6 @@
                         
                     }
                 }
-
-
-                
-
-
             }
 
 
