--- a/client/src/components/tweetComponent/Tweet.scss
+++ b/client/src/components/tweetComponent/Tweet.scss
@@ -1,119 +1,227 @@
 @import '../../style/mixins.scss';
 
-.tweet{    
-    position: relative;
-    left: 3%;
-    width: 93%;
+.tweet-section{
+    width: 100%;
     height: 8em;
-    margin-top: 3rem;
+    border: 1px gray solid;
 
     display: flex;
     flex-direction: row;
 
-    border: 1px solid black;
-    
-    .tweet-image-area{
-        width: 10%;
-        margin: auto;
-        height: 5em;
-        padding-left: 0.5em;
-            img{
-                width: 100%;
-                height: 4.8em;
-                border-radius: 50%;
-                border: 1px solid black;
-            }
+    .pfp-section{
+        width: 9%;
+        
+        
+        display: flex;
+        justify-content: center;
+        .tweet-pfp{
+            margin-top: 0.5em;
+            width: 80%;
+            height: 50%;
+            border-radius: 50%;
+            
+        }
     }
 
     .tweet-area{
-        background-color: aqua;
-        width: 90%;
-        margin-left: 0.5em;
-        overflow: hidden;
-        text-overflow: clip;
+        margin-left: 0.3em;
+        width: 91%;
+        height: 100%;
 
-        
         display: flex;
         flex-direction: column;
+
         .header{
-            height: 25%;
-            .username{
-                margin-left: 0.4em;
-                font-weight: bold;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            height: 20%;
+            
+            padding-top: 0.2em;
+            padding-left: 0.3em;
+            .profile-link{
+                color: black;
+                margin-right: 0.3em;
             }
             .handleName{
-                margin-left: 1rem;
-                color: gray;
+                color: #3d3f41;
+            }
+            .potus-del-btn{
+                padding-right: 0.8em;
+                padding-top: 0.2em;
             }
         }
+
         .message{
-            height: 65%;
-            margin-left: 0.4em;
-            max-width: 95%;
+            padding-left: 0.3em;
+            height: 60%;
             overflow: hidden;
             word-wrap: break-word;
-            font-size: 95%;
+            font-size: 92%;
         }
+
         .button-section{
             display: flex;
+            flex-direction: row;
             justify-content: space-between;
+            padding-left: 0.3em; 
+            height: 20%;
+            color: gray;
+            .reply-btn-area{
+
+            }
+
+            .like-btn-area{
+                display: flex;
+                justify-content: center;
+                span{
+                    margin-right: 0.3em;
+                }
+
+                .like-btn{
+                    
+                }
+            }
+
             .del-btn-area{
+                margin-right: 0.5em;
+                border-radius: 5px;
+                border: 1px gray solid;
+                color: black;
+                padding-top: 0.15em;
+                padding-left: 4px;
+                padding-right: 4px;
+                margin-bottom: 2px;
+
+
+            &:hover{
+                background-color: red;
+                color: white;
+                box-shadow: var(--box-shadow);
+            }
+            }
+
             
-                height: 25%;
-                margin-left: 0.4em;
-                .btn-delete{
-                    @include btn();
-                    margin-right: 1rem;
-                    background-color: var(--danger-color);
-                    color: var(--text-light-color);
-                }
-            }
-    
-            .potus-del-btn{
-    
-                .potus-btn-delete{
-                    @include btn();
-                    margin-right: 1rem;
-                    background-color: rgb(255, 230, 0);
-                    color: var(--text-dark-color);
-                }
-            }
         }
-
-
     }
-
-    // .tweet-image-area{
-    //     width: 10%;
-    //     background-color: aquamarine;
-    //     margin-right: 1%;
-        
-    //     .tweet-pfp{
-    //         display: flex;
-    //         justify-content: center;
-    //         width: 100%;
-    //     }
-    // }
-
-    // .tweet-text-area{
-    //     width: 90%;
-    //     background-color: aqua;
-
-    //     .header{
-
-    //     }
-    //     .message{
-            
-    //     }
-    //     .likesMisc{
-
-    //     }
-    // }
-
-    // .btn-delete{
-    //     @include btn();
-    //     margin-right: 1rem;
-    //     background-color: var(--danger-color);
-    //     color: var(--text-light-color);
-    // }
 }
+
+
+
+// .tweet{    
+//     position: relative;
+//     left: 3%;
+//     width: 93%;
+//     height: 8em;
+//     margin-top: 3rem;
+
+//     display: flex;
+//     flex-direction: row;
+
+//     border: 1px solid black;
+    
+//     .tweet-image-area{
+//         width: 10%;
+//         margin: auto;
+//         height: 5em;
+//         padding-left: 0.5em;
+//             img{
+//                 width: 100%;
+//                 height: 4.8em;
+//                 border-radius: 50%;
+//                 border: 1px solid black;
+//             }
+//     }
+
+//     .tweet-area{
+//         background-color: aqua;
+//         width: 90%;
+//         margin-left: 0.5em;
+//         overflow: hidden;
+//         text-overflow: clip;
+
+        
+//         display: flex;
+//         flex-direction: column;
+//         .header{
+//             height: 25%;
+//             .username{
+//                 margin-left: 0.4em;
+//                 font-weight: bold;
+//             }
+//             .handleName{
+//                 margin-left: 1rem;
+//                 color: gray;
+//             }
+//         }
+//         .message{
+//             height: 65%;
+//             margin-left: 0.4em;
+//             max-width: 95%;
+//             overflow: hidden;
+//             word-wrap: break-word;
+//             font-size: 95%;
+//         }
+//         .button-section{
+//             display: flex;
+//             justify-content: space-between;
+//             .del-btn-area{
+            
+//                 height: 25%;
+//                 margin-left: 0.4em;
+//                 .btn-delete{
+//                     @include btn();
+//                     margin-right: 1rem;
+//                     background-color: var(--danger-color);
+//                     color: var(--text-light-color);
+//                 }
+//             }
+    
+//             .potus-del-btn{
+    
+//                 .potus-btn-delete{
+//                     @include btn();
+//                     margin-right: 1rem;
+//                     background-color: rgb(255, 230, 0);
+//                     color: var(--text-dark-color);
+//                 }
+//             }
+//         }
+
+
+//     }
+
+//     // .tweet-image-area{
+//     //     width: 10%;
+//     //     background-color: aquamarine;
+//     //     margin-right: 1%;
+        
+//     //     .tweet-pfp{
+//     //         display: flex;
+//     //         justify-content: center;
+//     //         width: 100%;
+//     //     }
+//     // }
+
+//     // .tweet-text-area{
+//     //     width: 90%;
+//     //     background-color: aqua;
+
+//     //     .header{
+
+//     //     }
+//     //     .message{
+            
+//     //     }
+//     //     .likesMisc{
+
+//     //     }
+//     // }
+
+//     // .btn-delete{
+//     //     @include btn();
+//     //     margin-right: 1rem;
+//     //     background-color: var(--danger-color);
+//     //     color: var(--text-light-color);
+//     // }
+// }
