--- a/client/src/components/tweetComponent/TweetBox.scss
+++ b/client/src/components/tweetComponent/TweetBox.scss
@@ -1,56 +1,79 @@
 @import '../../style/mixins.scss';
 
-.submit-tweet-box{
-    position: relative;
-    // Parent takes left: 17%  100 - 17 = 83 --> 3 + 77 Removes 3%
-    left: 3%;
-    width: 93%;
+.form{
+    width: 100%;
     height: 8em;
-    margin-top: 2em;
-    background-color: white;
-    border: 1px solid black;
+    border: 1px solid gray;    
+    display: flex;
+    flex-direction: row;
+            
+            .pfp-section{
+                width: 9%;
+                display: flex;
+                justify-content: center;
     
-
-    .form{
-
-        .tweetbox-section{
-            display: flex;
-            flex-direction: row;
-
-            .pfp{
-                width: 10%;
-                margin: auto;
-                height: 5em;
-                img{
-                    
-                    width: 100%;
-                    height: 4.8em;
+                .tweet-pfp{
+                    margin-top: 0.5em;
+                    width: 80%;
+                    height: 50%;
                     border-radius: 50%;
-                    
                 }
-                
             }
-            .text-section{
-                width: 90%;
 
-                
+            .text-section{
+                margin-left: 0.3em;
+                width: 91%;
+                height: 100%;
+
+
+                display: flex;
+                flex-direction: column;
                 
                 .tweet-message{
-                    height: 5em;
-                    font-size: 14pt;
-                    width: 100%;
+
+                    &:placeholder-shown{
+                        font-size: 1.5em;
+                    }
+                    margin-top: 0.4em;
+                    padding-left: 0.3em;
+                    
+                    overflow: hidden;
+                    height: 75%;
+                    word-wrap: break-word;
+                    font-size: 100%;
                     resize: none;
-                }
-                .misc{
-                    .btn-submit{
-                        @include btn();
-                        width: 10%;
-                        background: purple;
-                        color: var(--text-light-color);
+                    &:focus{
+                        outline:none;
                     }
                 }
-                
+
+                .misc{
+                    height: 25%;
+
+                    display: flex;
+                    justify-content: flex-end;
+
+                    .btn-submit{
+                        margin-right: 0.5em;
+                        border-radius: 30px;
+                        border: 1px gray solid;
+                        padding-top: 0.15em;
+                        padding-left: 4px;
+                        padding-right: 4px;
+                        margin-bottom: 2px;
+
+                        width: 6.5em;
+                        padding: 5px 5px 5px 5px;
+
+
+                        background-color: #1d9bf0;
+                        color: white;
+                    }
+                    
+
+                }
+
+
+
             }
         }
-    }
-}
