--- a/client/src/style/mixins.scss
+++ b/client/src/style/mixins.scss
@@ -18,6 +18,25 @@
     }
 }
 
+@mixin sidebar-btn(){
+    padding: 0.3rem 0.5rem;
+    border-radius: 5px;
+    border: 1px gray solid;
+    padding: 0.6em;
+    margin: 0.2em;
+    span{
+        color: black;
+    }
+    &:hover{
+        box-shadow: var(--box-shadow);
+        
+        background-color: #1d9bf0;
+        span{
+            color:white;
+        }
+    }
+}
+
 @mixin card(){
     padding: 1rem;
     border-radius: 10px;
